--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,4 +1,5 @@
 .dash {
+	/* background: #9999a1; */
 	display: flex;
 	flex-direction: row;
 	/* justify-content: flex-end; */
@@ -13,7 +14,8 @@
 	align-items: center;
 	flex: 1;
 	/* width: 20vw; */
-	color: #2b4162;
+	/* color: #2b4162; */
+	color: white;
 }
 
 .profile {
@@ -28,8 +30,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* width: 20vw; */
+	max-width: 325px;
+
 	flex: 1;
 	border: 1px solid #2b4162;
-	background: #9999a1;
+	/* background: #2b4162; */
+	color: white;
+	font-weight: 600;
 }
