--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -13,3 +13,21 @@
 	max-width: 250px;
 	max-height: 200px;
 }
+
+/* .line {
+	background: #2b4162;
+	width: 250px;
+	height: 5px;
+	margin: 5px;
+} */
+
+.cardBottom {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	background: #2b4162;
+	color: white;
+	width: 100%;
+	height: 99px;
+}
