--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -18,13 +18,6 @@
 	color: white;
 }
 
-.profile {
-	display: flex;
-	flex-direction: column;
-	border: solid 1px #2b4162;
-	padding: 10px;
-}
-
 .module {
 	margin: 30px;
 	display: flex;
@@ -35,6 +28,13 @@
 	flex: 1;
 	border: 1px solid #2b4162;
 	/* background: #2b4162; */
-	color: white;
-	font-weight: 600;
+	color: #2b4162;
+	font-weight: 800;
+}
+.reviewModule {
+	flex: 2;
+}
+
+.moduleTitle {
+	font-size: 2em;
 }
