--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -15,3 +15,9 @@
 .reviewCard:hover {
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
+.input {
+	width: 90%;
+	height: 100px;
+	font-size: 1em;
+}
