--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -21,3 +21,18 @@
 	height: 100px;
 	font-size: 1em;
 }
+
+.reviewButtonContainer {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+}
+
+.reviewButton {
+	background: #2b4162;
+	color: white;
+	font-size: 1em;
+	margin: 5px;
+	height: 50px;
+	width: 100px;
+}
