dried out gamereviews component to dynamically create only reviews and not nulls

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -12,6 +12,12 @@
 	/* min-width: 1000px; */
 }
 
+.leftInfo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .gameInfo {
 	flex: 1;
 }
