--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
 	text-align: center;
 }
 
+.link {
+	cursor: pointer;
+}
+
 .App-logo {
 	animation: App-logo-spin infinite 20s linear;
 	height: 40vmin;
