--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -29,9 +29,13 @@
 }
 
 .reviewButton {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background: #2b4162;
 	color: white;
-	font-size: 1em;
+	font-size: 1.25em;
+	font-weight: 700;
 	margin: 5px;
 	height: 50px;
 	width: 100px;
