--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 * {
 	color: inherit;
 	text-decoration: inherit;
-	font-family: 'Crimson Text', serif;
+	font-family: 'Fira Sans', sans-serif;
+	/* font-size: 1em; */
+	/* font-family: 'Crimson Text', serif; */
 }
 
 .App {
