--- a/src/components/AllGames/AllGames.css
+++ b/src/components/AllGames/AllGames.css
@@ -1,5 +1,7 @@
 .icon {
 	width: 30px;
+	filter: invert(100%);
+	margin: 10px;
 }
 
 .gameScreen {
@@ -70,4 +72,21 @@
 
 .clicker {
 	margin: 1px;
+}
+
+@media (max-width: 800px) {
+	.subHeader {
+		display: none;
+	}
+	.selector {
+		position: fixed;
+		bottom: 0;
+		z-index: 2;
+	}
+}
+@media (max-width: 450px) {
+	.icon {
+		margin-left: 30px;
+		margin-right: 30px;
+	}
 }
