created about page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 	font-family: 'Fira Sans', sans-serif;
 	/* font-size: 1em; */
 	/* font-family: 'Crimson Text', serif; */
+	/* background: black; */
 }
 
 .App {
