--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -94,3 +94,11 @@
 	color: white;
 	z-index: 2;
 }
+
+.super:hover {
+	transition: all 0.3s ease;
+	/* color: #9999a1; */
+	transform: scale(1.1);
+	cursor: pointer;
+	/* color: white; */
+}
