--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -102,3 +102,27 @@
 	cursor: pointer;
 	/* color: white; */
 }
+
+.starEdit {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	flex-wrap: wrap;
+}
+
+.noStars {
+	background: #2b4162;
+	color: white;
+	height: 25px;
+	/* width: 50px; */
+	margin-left: 30px;
+	margin-right: 30px;
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.noStars:hover {
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
