--- a/src/components/GameReview/GameReview.css
+++ b/src/components/GameReview/GameReview.css
@@ -1,4 +1,5 @@
 .reviewCard {
+	position:relative;
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
@@ -125,4 +126,10 @@
 
 .noStars:hover {
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.timestamp{
+	position: absolute;
+	top:10px;
+	right: 10px
 }
