--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -80,3 +80,29 @@
 .fav:after {
 	background: red;
 }
+
+.checkBox{
+	border: solid 2px #2b4162;
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	left: 15px;
+	top: 15px;
+	background:white
+}
+
+
+.check{
+	/* border: solid 2px #2b4162; */
+	height: 28px;
+	width: 28px;
+	position: absolute;
+	left: 18px;
+	top: 18px;
+}
+.checkBox:hover{
+	cursor:pointer
+}
+.check:hover{
+	cursor:pointer
+}
