--- a/src/components/NewGame/NewGame.css
+++ b/src/components/NewGame/NewGame.css
@@ -5,11 +5,12 @@
 	align-items: flex-start;
 	flex-direction: column;
 	position: fixed;
-	left: 20vw;
-	right: 20vw;
-	bottom: 4vh;
-	top: 4vh;
-	height: 90vh;
+	left: auto;
+	right: auto;
+	bottom: auto;
+	top: auto;
+	/* height: 90vh; */
+	overflow: scroll;
 	z-index: 2;
 	/* max-width: 800px; */
 	/* min-height: 600px; */
@@ -68,7 +69,7 @@ textarea {
 	align-items: flex-end;
 	flex-wrap: wrap;
 	/* width: 100px; */
-	width: 200px; 
+	width: 200px;
 	height: 30px;
 	margin: 5px;
 	border-radius: 5px;
@@ -94,7 +95,7 @@ textarea {
 		margin-right: 150px;
 	} */
 	.pendingImage {
-		display:none
+		display: none;
 	}
 }
 
@@ -106,7 +107,7 @@ textarea {
 	width: 100%;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around; 
+	justify-content: space-around;
 	align-items: center;
 	flex-wrap: wrap;
 }
